--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,9 @@
         <div class=" site-header__logo__graphic icon icon--clear-view-escapes">Clear View Escapes</div>
       </div>
 
-      <div class="site-header__menu-icon"></div>
+      <div class="site-header__menu-icon">
+        <div class="site-header__menu-icon__middle"></div>
+      </div>
 
       <div class="site-header__menu-content">
         <div class="site-header__btn-container">
@@ -159,5 +161,6 @@
   <footer>
     <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in Touch</a></p>
   </footer>
+  <script type="text/javascript" src="/temp/scripts/App.js"></script>
 </body>
 </html>
